# gmacftp

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  build.rs  gmacFTP.entitlements
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
assets/: icon.icns
docs/: ARCHITECTURE.md  PRIVACY.md
scripts/: build-app.sh  build-dmg.sh  make-icon.py
src/: app.rs  lib.rs  macos_menu.rs  main.rs  updater.rs
src/model/: connection.rs  entry.rs  mod.rs  protocol.rs  transfer.rs
src/net/: error.rs  ftp.rs  mod.rs  safe.rs  sftp.rs
src/store/: cloud.rs  connections.rs  creds.rs  keychain.rs  memory.rs  mod.rs  settings.rs  vault.rs
src/transfer/: mod.rs  progress.rs
ui/: app.slint
